<?xml version="1.0"?>
<package format="3">
  <name>sensor_toggle_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 node to toggle CARLA sensors (e.g., LIDAR) via keyboard input.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- 추가 의존성이 필요하면 여기에 명시 -->
  
  <exec_depend>pygame</exec_depend>
  <exec_depend>carla</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
